<resources>
    <string name="app_name">ONVIFCamera-Android</string>
    <string name="start_player">Start Player</string>
    <string name="Connect">Connect to camera</string>
    <string name="not_connected">No camera connected</string>
    <string name="getting_profiles">Getting profiles…</string>
    <string name="getting_stream_uri">Getting streaming URI…</string>
    <string name="Play">Play Stream</string>
    <string name="ip_address">IP Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>
