<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="23dp"
    tools:context="com.rvirin.onvif.demo.MainActivity">

    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="272dp"
        android:layout_height="108dp"
        android:layout_marginBottom="32dp"
        android:text="@string/not_connected"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="connectClicked"
        android:text="@string/Connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="playClicked"
        android:enabled="false"
        android:text="Play stream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_button"
        app:layout_constraintStart_toEndOf="@id/connect_button" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="viewClicked"
        android:enabled="false"
        android:text="View snapshot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/connect_button" />

    <EditText
        android:id="@+id/ipAddress"
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login"
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/explanationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>
